--- a/app/src/main/res/layout/form.xml
+++ b/app/src/main/res/layout/form.xml
@@ -12,7 +12,7 @@
         android:text="Nom :" />
 
     <EditText
-        android:id="@+id/editTextnom"
+        android:id="@+id/editTextNom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -40,7 +40,7 @@
         android:text="E-mail :" />
 
     <EditText
-        android:id="@+id/editTextMail"
+        android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
