recuperation tp maidi

--- a/app/src/main/res/layout/list_view_contact.xml
+++ b/app/src/main/res/layout/list_view_contact.xml
@@ -15,14 +15,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="TextView" />
+            android:text="FirstName" />
 
         <TextView
             android:id="@+id/listTextViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:layout_weight="2"
+            android:text="Name" />
     </LinearLayout>
 
     <TextView
@@ -30,5 +30,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="Email" />
 </LinearLayout>
