--- a/app/src/main/res/layout/list_view_contact.xml
+++ b/app/src/main/res/layout/list_view_contact.xml
@@ -1,14 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:padding="10dp">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp"
+        >
 
         <TextView
             android:id="@+id/listTextViewFirstname"
@@ -21,7 +23,7 @@
             android:id="@+id/listTextViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:text="Name" />
     </LinearLayout>
 
