--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nouveau contact"
-        android:onClick="onAddContact"/>
+        android:onClick="onAddContact"
+        />
 
     <ListView
         android:id= "@+id/contactListView"
